--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ img {
 }
 
 #contenedor1{
-    background-color:  #113c5a;;
+    background: linear-gradient(white,#113c5a);
+    /* background-color:  #113c5a; */
     color: white;
     /* float: left; */
 }
@@ -27,14 +28,24 @@ img {
     margin-left: 20px;
 }
 
-#datos {
-    padding-left: 10px;
-    text-align: justify;
+.datos {
+    /* display: inline-block; */
+    display: grid;
+    grid-template-columns: 45% 55%;
+    /* background-color: white; */
+    /* background: linear-gradient(to right, blue 50%, yellow 50%); */
+    text-align: right;
+    /* width: 40%; */
+    justify-content: space-around;
+    /* text-align: justify; */
+    /* column-count: 2;
+    column-width: auto;
+    column-rule: 1px dotted rgb(75, 70, 74); */
 }
 
 #nombre {
     text-align: center;
-    color:  #113c5a;;
+    color:  #113c5a;
     font-size: 40px;
 }
 
@@ -47,14 +58,19 @@ img {
 
 .subtitulo {
     width: 400px;
-    background-color:  #113c5a;;
+    background-color:  #113c5a;
     color: white;
     margin: 20px;
     justify-content: center;
     border-radius: 10px;
     text-align: center;
     padding: 5px;
-    box-shadow: 20px -16px teal;
+    /* box-shadow: 20px -16px teal; */
+    box-shadow: rgba(17,60,90, 0.4) 5px 5px,
+        rgba(17,60,90, 0.3) 10px 10px,
+        rgba(17,60,90, 0.2) 15px 15px,
+        rgba(17,60,90, 0.1) 20px 20px,
+        rgba(17,60,90, 0.05) 25px 25px;
 }
 
 .contenido-lista {
@@ -64,13 +80,15 @@ img {
     color:black;
     /* white-space: initial;
     overflow: hidden; */
-    column-count: 2;
+    /* column-count: 2;
     column-width: auto;
-    column-rule: 1px dotted rgb(75, 70, 74);
+    column-rule: 1px dotted rgb(75, 70, 74); */
+    display: grid;
+    grid-template-columns: 45% 55%;
 }
 
 #contenedor1 h2{
-    box-shadow: none;
+    /* box-shadow: none; */
     width: auto;
 } 
 
@@ -78,6 +96,70 @@ img {
     color: #c8c7c1;
 }
 
+#icono {
+    width: 50px;
+}
 
+.email-icon{
+    background-color: white;
+    margin:0;
+}
 
+.fondo-icono{
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    margin-bottom: 15px;
+}
 
+.info{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.datos p{
+    padding-top: 25px;
+    color: white;
+}
+
+.texto-2 {
+    width: 300px;
+    text-align: justify;
+}
+
+.texto-info{
+    width: 500px;
+    text-align: justify;
+}
+
+.habilidades {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.info-2 {
+    padding-top: 5px;
+    text-align: center;
+    margin-left: 10px;
+}
+
+.fondo-habilidades {
+    background: linear-gradient(to right, white 0%, white 60%, rgba(17, 60, 90, 0.9) 60%,
+        rgba(17, 60, 90, 1) 100%);
+    margin: 7px 10px;
+    border-radius: 10px;
+    padding: 0;
+}
+
+.logos{
+    display:flex;
+    justify-content: space-around;
+    /* grid-template-columns: 25% 25% 25% 25%;
+    margin: 20px; */
+}
+
+.logo{
+    width: 60px;
+}
