--- a/index.css
+++ b/index.css
@@ -19,28 +19,20 @@ img {
 
 #contenedor1{
     background: linear-gradient(white,#113c5a);
-    /* background-color:  #113c5a; */
     color: white;
-    /* float: left; */
+    flex-direction: column;
 }
 
 #contenedor2{
     margin-left: 20px;
+    flex-direction: column;
 }
 
 .datos {
-    /* display: inline-block; */
     display: grid;
     grid-template-columns: 45% 55%;
-    /* background-color: white; */
-    /* background: linear-gradient(to right, blue 50%, yellow 50%); */
     text-align: right;
-    /* width: 40%; */
     justify-content: space-around;
-    /* text-align: justify; */
-    /* column-count: 2;
-    column-width: auto;
-    column-rule: 1px dotted rgb(75, 70, 74); */
 }
 
 #nombre {
@@ -74,21 +66,13 @@ img {
 }
 
 .contenido-lista {
-    /* margin-left: 60px; */
-    /* width: 200px; */
     text-align: left;
     color:black;
-    /* white-space: initial;
-    overflow: hidden; */
-    /* column-count: 2;
-    column-width: auto;
-    column-rule: 1px dotted rgb(75, 70, 74); */
     display: grid;
     grid-template-columns: 45% 55%;
 }
 
 #contenedor1 h2{
-    /* box-shadow: none; */
     width: auto;
 } 
 
@@ -148,8 +132,6 @@ img {
 .logos{
     display:flex;
     justify-content: space-around;
-    /* grid-template-columns: 25% 25% 25% 25%;
-    margin: 20px; */
 }
 
 .logo{
