--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-    /* border: 2px solid black; */
+    border: 2px solid black;
     margin: 0;
     padding: 0;
     font-family: 'Ruwudu', serif;
@@ -57,7 +57,6 @@ img {
     border-radius: 10px;
     text-align: center;
     padding: 5px;
-    /* box-shadow: 20px -16px teal; */
     box-shadow: rgba(17,60,90, 0.4) 5px 5px,
         rgba(17,60,90, 0.3) 10px 10px,
         rgba(17,60,90, 0.2) 15px 15px,
